--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
             <section id="about">
                 <h2>About Me</h2>
                 <p>
-                    I really dont want to write this part right now.
+                    
+                    Hi, my name is Irem Topsakal. I am currently working as a research/teaching assistant in Metallurgical and Materials Engineering at Middle East Technical University while continuing my Master's degree. I received my BSc degree from the same department in 2024. For now, that's the list of my profesional titles :)
+          
+                </p>
+                <p>
+                 Other than that,
                 </p>
             </section>
 
