Revise personal info and add teaching, conference sections
Updated personal information and added new teaching and conference details.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
         <h2>About Me</h2>
         <p>
           Hi, my name is Irem Topsakal. I am currently working as a research/teaching assistant in Metallurgical and
-          Materials Engineering at Middle East Technical University while continuing my Master's degree. I received my
-          BSc degree from the same department in 2024. For now, that's the list of my professional titles :)
+          Materials Engineering at Middle East Technical University while continuing my Master's degree. I am currently working on
+          modelling and optimizing the leaching process for lithium-ion batteries with reinforcement learning. I love playing boardgames and long walks :)
         </p>
-        <p>Other than that,</p>
       </section>
 
       <section id="education">
@@ -92,7 +91,7 @@
         <h2>Teaching</h2>
         <div class="item">
           <p class="item-title"><strong>METE310: Structure and Characterization of Materials</strong></p>
-          <p class="item-meta">Spring 2024 - 2025</p>
+          <p class="item-meta">Spring 2024 - 2025, Fall 2025-2026</p>
           <ul class="item-description">
             <li>My course notes can be found in <a href="images.jpeg">here</a>.</li>
           </ul>
@@ -104,11 +103,23 @@
             <li>My course notes can be found in <a href="images.jpeg">here</a>.</li>
           </ul>
         </div>
+        <div class="item">
+          <p class="item-title"><strong>METE230:Fundamentals of Materials Science and Engineering</strong></p>
+          <p class="item-meta">Fall 2025 - 2026</p>
+          <ul class="item-description">
+            <li>This course is given to Mechanical Engineering students.</li>
+          </ul>
+        </div>
       </section>
 
       <section id="publications">
         <h2>Publications</h2>
         <p>Hopefully soon :)</p>
+      </section>
+
+       <section id="conferences-presentations">
+        <h2>Conferences & Presentations</h2>
+        <li><strong>Topsakal, I.</strong>, & Sargin, I. (2025, Sept). Reinforcement Learning Framework for Optimizing Leaching Recovery from End-of-Life LIBs. Presented at the E-MRS Fall 2025 Conference</li>
       </section>
     </main>
 
