Add Conferences section to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="#experience" class="nav-link">Experience</a>
     <a href="#teaching" class="nav-link">Teaching</a>
     <a href="#publications" class="nav-link">Publications</a>
+    <a href="#conferences" class="nav-link">Conferences</a>
   </nav>
 
   <div class="container">
@@ -117,8 +118,8 @@
         <p>Hopefully soon :)</p>
       </section>
 
-       <section id="conferences-presentations">
-        <h2>Conferences & Presentations</h2>
+       <section id="conferences">
+        <h2>Conferences</h2>
         <li><strong>Topsakal, I.</strong>, & Sargin, I. (2025, Sept). Reinforcement Learning Framework for Optimizing Leaching Recovery from End-of-Life LIBs. Presented at the E-MRS Fall 2025 Conference</li>
       </section>
     </main>
